k8s/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          resources:
            limits:
              ephemeral-storage: '1Gi'
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: ptd
      volumes:
        - name: ptd
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  selector:
    component: postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
