k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-ptd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-ptd
  template:
    metadata:
      labels:
        component: server-ptd
    spec:
      containers:
        - name: server-ptd
          image: leolazz/parttimedev-backend:2.0
          ports:
            - containerPort: 5000
          resources:
            limits:
              ephemeral-storage: '1Gi'
              memory: '1Gi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  name: server-ptd-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server-ptd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
