k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-ptd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client-ptd
  template:
    metadata:
      labels:
        component: client-ptd
    spec:
      containers:
        - name: client-ptd
          image: leolazz/parttimedev-client:prod
          resources:
            limits:
              memory: '100Mi'
              cpu: '100m'
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-ptd-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: client-ptd
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ptd-ingress
  labels:
    component: client-ptd
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
    - host: parttimedev.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-ptd-cluster-ip-service
                port:
                  number: 300
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-ptd-cluster-ip-service
                port:
                  number: 8080
