k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
    - host: parttimedev.test
      http:
        paths:
          - backend:
              serviceName: client-ptd-cluster-ip-service
              servicePort: 3000
      # - http:
      #     paths:
      #       - path: /?(.*)
      #         pathType: Prefix
      #         backend:
      #           service:
      #             name: client-ptd-cluster-ip-service
      #             port:
      #               number: 3000
      # - path: /api/?(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: server-ptd-cluster-ip-service
      #       port:
      #         number: 8080
